address review: setting wording, session snapshot, live-call set sizing
Cycle 1 of the bot review found no blocking issues. Its three nits:

- the arcadedb.ha.peerAllowlist.enabled text read awkwardly; rewritten
- getSessions() returned an unmodifiable view rather than a snapshot, so
  two reads in a test could differ; returns Set.copyOf now
- the per-RPC wrapper cost under connection churn: argued in the tracking
  doc (three short-lived allocations against a baseline gRPC already pays
  more than, and proportional to RPCs rather than to entries), with the
  one change that was actually warranted - the per-session live-call set
  no longer defaults to 16 slots for a connection with a handful of RPCs

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01ExK43vNXCF5WGoHu6CtDiy